asm target changes

--- a/VKVideoCallModule/ASMMeeting.storyboard
+++ b/VKVideoCallModule/ASMMeeting.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -334,7 +334,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="yiH-mk-yB7">
-                                        <rect key="frame" x="88.666666666666686" y="41" width="198" height="46"/>
+                                        <rect key="frame" x="50.666666666666657" y="41" width="274" height="46"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="auQ-Lf-t3q">
                                                 <rect key="frame" x="0.0" y="0.0" width="46" height="46"/>
@@ -361,7 +361,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mzh-Tl-Dzg">
-                                                <rect key="frame" x="75.999999999999986" y="0.0" width="46" height="46"/>
+                                                <rect key="frame" x="76" y="0.0" width="46" height="46"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="te0-q2-eXb">
                                                         <rect key="frame" x="0.0" y="0.0" width="46" height="46"/>
@@ -411,8 +411,8 @@
                                                     <constraint firstItem="OgJ-SB-1E7" firstAttribute="leading" secondItem="JRQ-Ol-ak0" secondAttribute="leading" id="eoE-5k-v9V"/>
                                                 </constraints>
                                             </view>
-                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yav-nb-QQO">
-                                                <rect key="frame" x="198" y="0.0" width="46" height="46"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yav-nb-QQO">
+                                                <rect key="frame" x="228.00000000000003" y="0.0" width="45.999999999999972" height="46"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eYn-JD-QVV">
                                                         <rect key="frame" x="0.0" y="0.0" width="46" height="46"/>
@@ -420,7 +420,7 @@
                                                             <constraint firstAttribute="height" constant="46" id="4Pa-8v-SWq"/>
                                                             <constraint firstAttribute="width" constant="46" id="7Mn-0B-I0E"/>
                                                         </constraints>
-                                                        <state key="normal" image="record-icon">
+                                                        <state key="normal" image="CameraOff">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
@@ -437,10 +437,10 @@
                                                 </constraints>
                                             </view>
                                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UPv-qF-DyP">
-                                                <rect key="frame" x="198" y="0.0" width="0.0" height="46"/>
+                                                <rect key="frame" x="274" y="0.0" width="0.0" height="46"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2nc-er-M9C">
-                                                        <rect key="frame" x="-33.000000000000028" y="-10" width="66" height="66"/>
+                                                        <rect key="frame" x="-33" y="-10" width="66" height="66"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="66" id="0gD-le-dLm"/>
@@ -518,6 +518,7 @@
                         <outlet property="remoteView3Container" destination="BYn-Sg-AKA" id="A6M-g3-Imq"/>
                         <outlet property="remoteViewContainer" destination="Ext-Mh-ZIg" id="dS7-4k-KOR"/>
                         <outlet property="stopVideoButton" destination="eYn-JD-QVV" id="JBX-SG-jDE"/>
+                        <outlet property="switchCameraView" destination="auQ-Lf-t3q" id="6Hi-rm-elQ"/>
                         <outlet property="userNameLabel" destination="Hhq-e6-mzj" id="xoi-ct-1e6"/>
                         <outlet property="videoStackView" destination="cve-dv-whh" id="wJu-su-5cI"/>
                         <outlet property="videoStackViewTopConstraint" destination="gZ2-k5-Mu5" id="69M-bu-2dc"/>
@@ -537,6 +538,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="CameraOff" width="60" height="60"/>
         <image name="MuteOn" width="66" height="66"/>
         <image name="asm-flip-icon" width="46" height="46"/>
         <image name="asm-leave-icon" width="46" height="46"/>
