--- a/VKVideoCallModule/ASMMeeting.storyboard
+++ b/VKVideoCallModule/ASMMeeting.storyboard
@@ -286,13 +286,13 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aE7-jQ-8dZ">
-                                <rect key="frame" x="169.33333333333334" y="397.33333333333331" width="36.333333333333343" height="17.666666666666686"/>
+                                <rect key="frame" x="169" y="397.33333333333331" width="37" height="17.666666666666686"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cje-Am-LWm">
-                                <rect key="frame" x="274" y="46" width="81" height="27"/>
+                                <rect key="frame" x="274.66666666666669" y="46" width="80.333333333333314" height="27"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="record-icon" translatesAutoresizingMaskIntoConstraints="NO" id="5lv-kK-9Hg">
                                         <rect key="frame" x="0.0" y="0.0" width="27" height="27"/>
@@ -302,7 +302,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6OR-FF-sGW">
-                                        <rect key="frame" x="35" y="0.0" width="46" height="27"/>
+                                        <rect key="frame" x="35" y="0.0" width="45.333333333333343" height="27"/>
                                         <string key="text">запись
 </string>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
